// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App Component Tests Displays user details after successful authentication 1`] = `
<body>
  <div>
    <div
      data-testid="test-id-app-component"
    >
      <div
        class="app__content"
      >
        <h1
          class="app__title"
        >
          Welcome Nothile Moyo
        </h1>
        <p
          class="app__text"
        >
          Current status : active
        </p>
        <p
          class="app__text"
        >
          Email address : nothile1@gmail.com
        </p>
        <p
          class="app__text"
        >
          Session created : 2026/05/05 22:29:02
        </p>
        <p
          class="app__text"
        >
          Session expires : 2026/05/19 22:29:02
        </p>
      </div>
    </div>
  </div>
</body>
`;

exports[`App Component Tests Fails checkSessionValidation and triggers catch block 1`] = `
<body>
  <div>
    <div
      data-testid="test-id-app-component"
    >
      <div
        class="loadingWrapper"
        data-testid="test-id-loading-spinner"
      >
        <span
          class="loadingSpinner"
        />
        <p
          class="loadingText"
        >
          Loading, please wait...
        </p>
      </div>
    </div>
  </div>
</body>
`;
